tests/arrays/arrays.exp
Error: Arrays.js:10
 10: foo(a[1]);
         ^^^^ number. This type is incompatible with the expected param type of
  4: function foo(x:string) { }
                    ^^^^^^ string

Error: numeric_elem.js:7
  7: (arr[day]: string); // error: number ~> string
      ^^^^^^^^ Cannot cast `arr[day]` to string because number [1] is incompatible with string [2].
  References:
    6: arr[day] = 0;
                  ^ [1]: number
    7: (arr[day]: string); // error: number ~> string
                  ^^^^^^ [2]: string


Found 2 errors
